<resources>
    <string name="app_name">Money Manager</string>
    <string name="tvAccount">1200 LEI</string>
    <string name="add_expense">Add Expense</string>
    <string name="add_income">Add Income</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="cantity">Cantity</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="saveI">Save</string>
    <string name="sum">Sum</string>
    <string name="type">Type</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="textview">TextView</string>
    <string name="monthly">Monthly</string>
    <string name="daily">Daily</string>
    <string name="yearly">Yearly</string>
</resources>
